# spoofify-wav-downloader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
spotify_wav_dl/: bandcamp.py  cli.py  converter.py  deezer.py  downloader.py  spotify.py
